# tdt4230-project

./: .gitmodules  CMakeLists.txt  README.md  convert_to_png.sh  generate_video.sh
res/images/: image.ppm
res/shaders/: shader.vert
src/: aabb.cpp  aabb.h  camera.cpp  camera.h  color.cpp  color.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  interval.cpp  interval.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  octree.cpp  octree.h  rasterize.cpp  rasterize.h  ray.cpp  ray.h  scene.cpp  scene.h  shader.cpp  shader.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  util.cpp  util.h  vec3.cpp  vec3.h  window.cpp  window.h
src/geometry/: plane.cpp  plane.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
src/math/: intersection.cpp  intersection.h  interval.cpp  interval.h  util.cpp  util.h
src/render/: camera.cpp  camera.h  color.cpp  color.h  ray.cpp  ray.h
src/scene/: aabb.cpp  aabb.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  material.cpp  material.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  octree.cpp  octree.h
